--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 @layer base{
     .nav-item {
-        @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/10 hover:text-white transition duration-300;
+        @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/10 hover:text-white transition;
     }
     .container{
         @apply w-full mx-auto px-3
